src/DlibDotNet.Native/dlib/extensions/extensions.h

DLLEXPORT void extensions_convert_array_to_managed_image(array2d_type src_type, void* src, void* dst, bool rgb_reverse, uint32_t rows, uint32_t columns, uint32_t steps, uint32_t channels)
{
    switch(src_type)
    {
        case array2d_type::RgbPixel:
            {
                dlib::array2d<dlib::rgb_pixel>& s = *(static_cast<dlib::array2d<dlib::rgb_pixel>*>(src));
                uint8_t* d = static_cast<uint8_t*>(dst);
                if (rgb_reverse)
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t dst_row = steps * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            d[dst_row + dst_column + 2] = s[r][c].red;
                            d[dst_row + dst_column + 1] = s[r][c].green;
                            d[dst_row + dst_column + 0] = s[r][c].blue;
                        }
                    }
                }
                else
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t dst_row = steps * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            d[dst_row + dst_column + 0] = s[r][c].red;
                            d[dst_row + dst_column + 1] = s[r][c].green;
                            d[dst_row + dst_column + 2] = s[r][c].blue;
                        }
                    }
                }
            }
            break;
        case array2d_type::RgbAlphaPixel:
            {
                dlib::array2d<dlib::rgb_alpha_pixel>& s = *(static_cast<dlib::array2d<dlib::rgb_alpha_pixel>*>(src));
                uint8_t* d = static_cast<uint8_t*>(dst);
                if (rgb_reverse)
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t dst_row = steps * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            d[dst_row + dst_column + 3] = s[r][c].alpha;
                            d[dst_row + dst_column + 2] = s[r][c].red;
                            d[dst_row + dst_column + 1] = s[r][c].green;
                            d[dst_row + dst_column + 0] = s[r][c].blue;
                        }
                    }
                }
                else
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t dst_row = steps * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            d[dst_row + dst_column + 0] = s[r][c].red;
                            d[dst_row + dst_column + 1] = s[r][c].green;
                            d[dst_row + dst_column + 2] = s[r][c].blue;
                            d[dst_row + dst_column + 3] = s[r][c].alpha;
                        }
                    }
                }
            }
            break;
        case array2d_type::UInt8:
        case array2d_type::UInt16:
        case array2d_type::Int16:
        case array2d_type::Int32:
        case array2d_type::Float:
        case array2d_type::Double:
        case array2d_type::HsiPixel:
            break;
        default:
            break;
    }
}
DLLEXPORT void extensions_convert_managed_image_to_array(void* src, array2d_type dst_type, void* dst, bool rgb_reverse, uint32_t rows, uint32_t columns, uint32_t steps, uint32_t channels)
{
    switch(dst_type)
    {
        case array2d_type::RgbPixel:
            {
                dlib::array2d<dlib::rgb_pixel>& d = *(static_cast<dlib::array2d<dlib::rgb_pixel>*>(dst));
                uint8_t* s = static_cast<uint8_t*>(src);

                if (rgb_reverse)
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t src_row = steps * r;
                        auto row = d[r];
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            row[c].red   = s[src_row + dst_column + 2];
                            row[c].green = s[src_row + dst_column + 1];
                            row[c].blue  = s[src_row + dst_column + 0];
                        }
                    }
                }
                else
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t src_row = steps * r;
                        auto row = d[r];
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            row[c].red   = s[src_row + dst_column + 0];
                            row[c].green = s[src_row + dst_column + 1];
                            row[c].blue  = s[src_row + dst_column + 2];
                        }
                    }
                }
            }
            break;
        case array2d_type::RgbAlphaPixel:        
            {
                dlib::array2d<dlib::rgb_alpha_pixel>& d = *(static_cast<dlib::array2d<dlib::rgb_alpha_pixel>*>(dst));
                uint8_t* s = static_cast<uint8_t*>(src);

                if (rgb_reverse)
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t src_row = steps * r;
                        auto row = d[r];
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            row[c].alpha = s[src_row + dst_column + 3];
                            row[c].red   = s[src_row + dst_column + 2];
                            row[c].green = s[src_row + dst_column + 1];
                            row[c].blue  = s[src_row + dst_column + 0];
                        }
                    }
                }
                else
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t src_row = steps * r;
                        auto row = d[r];
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            row[c].red   = s[src_row + dst_column + 0];
                            row[c].green = s[src_row + dst_column + 1];
                            row[c].blue  = s[src_row + dst_column + 2];
                            row[c].alpha = s[src_row + dst_column + 3];
                        }
                    }
                }
            }
            break;
        case array2d_type::UInt8:
            {
                dlib::array2d<uint8_t>& d = *(static_cast<dlib::array2d<uint8_t>*>(dst));
                uint8_t* s = static_cast<uint8_t*>(src);

                for (uint32_t r = 0; r < rows; r++)
                {
                    uint32_t src_row = steps * r;
                    for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        d[r][c] = s[src_row + dst_column];
                }
            }
            break;
        case array2d_type::UInt16:
        case array2d_type::Int16:
        case array2d_type::Int32:
        case array2d_type::Float:
        case array2d_type::Double:
        case array2d_type::HsiPixel:
            break;
        default:
            break;
    }
}
DLLEXPORT void extensions_convert_matrix_to_managed_image(matrix_element_type src_type, void* src, void* dst, bool rgb_reverse, uint32_t rows, uint32_t columns, uint32_t steps, uint32_t channels)
{
    switch(src_type)
    {
        case matrix_element_type::RgbPixel:
            {
                dlib::matrix<dlib::rgb_pixel>& s = *(static_cast<dlib::matrix<dlib::rgb_pixel>*>(src));
                uint8_t* d = static_cast<uint8_t*>(dst);
                if (rgb_reverse)
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t dst_row = steps * r;
                        uint32_t src_row = columns * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            dlib::rgb_pixel& rgb = s(r, c);
                            d[dst_row + dst_column + 2] = rgb.red;
                            d[dst_row + dst_column + 1] = rgb.green;
                            d[dst_row + dst_column + 0] = rgb.blue;
                        }
                    }
                }
                else
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t dst_row = steps * r;
                        uint32_t src_row = columns * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            dlib::rgb_pixel& rgb = s(r, c);
                            d[dst_row + dst_column + 0] = rgb.red;
                            d[dst_row + dst_column + 1] = rgb.green;
                            d[dst_row + dst_column + 2] = rgb.blue;
                        }
                    }
                }
            }
            break;
        case matrix_element_type::RgbAlphaPixel:
            {
                dlib::matrix<dlib::rgb_alpha_pixel>& s = *(static_cast<dlib::matrix<dlib::rgb_alpha_pixel>*>(src));
                uint8_t* d = static_cast<uint8_t*>(dst);
                if (rgb_reverse)
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t dst_row = steps * r;
                        uint32_t src_row = columns * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            dlib::rgb_alpha_pixel& rgb = s(r, c);
                            d[dst_row + dst_column + 3] = rgb.alpha;
                            d[dst_row + dst_column + 2] = rgb.red;
                            d[dst_row + dst_column + 1] = rgb.green;
                            d[dst_row + dst_column + 0] = rgb.blue;
                        }
                    }
                }
                else
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t dst_row = steps * r;
                        uint32_t src_row = columns * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            dlib::rgb_alpha_pixel& rgb = s(r, c);
                            d[dst_row + dst_column + 0] = rgb.red;
                            d[dst_row + dst_column + 1] = rgb.green;
                            d[dst_row + dst_column + 2] = rgb.blue;
                            d[dst_row + dst_column + 3] = rgb.alpha;
                        }
                    }
                }
            }
            break;
        case matrix_element_type::UInt8:
        case matrix_element_type::UInt16:
        case matrix_element_type::Int16:
        case matrix_element_type::Int32:
        case matrix_element_type::Float:
        case matrix_element_type::Double:
        case matrix_element_type::HsiPixel:
            break;
        default:
            break;
    }
}
DLLEXPORT void extensions_convert_managed_image_to_matrix(void* src, matrix_element_type dst_type, void* dst, bool rgb_reverse, uint32_t rows, uint32_t columns, uint32_t steps, uint32_t channels)
{
    switch(dst_type)
    {
        case matrix_element_type::RgbPixel:
            {
                dlib::matrix<dlib::rgb_pixel>& d = *(static_cast<dlib::matrix<dlib::rgb_pixel>*>(dst));
                uint8_t* s = static_cast<uint8_t*>(src);

                if (rgb_reverse)
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t src_row = steps * r;
                        uint32_t dst_row = columns * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            dlib::rgb_pixel& rgb = d(r, c);
                            rgb.red   = s[src_row + dst_column + 2];
                            rgb.green = s[src_row + dst_column + 1];
                            rgb.blue  = s[src_row + dst_column + 0];
                        }
                    }
                }
                else
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t src_row = steps * r;
                        uint32_t dst_row = columns * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            dlib::rgb_pixel& rgb = d(r, c);
                            rgb.red   = s[src_row + dst_column + 0];
                            rgb.green = s[src_row + dst_column + 1];
                            rgb.blue  = s[src_row + dst_column + 2];
                        }
                    }
                }
            }
            break;
        case matrix_element_type::RgbAlphaPixel:        
            {
                dlib::matrix<dlib::rgb_alpha_pixel>& d = *(static_cast<dlib::matrix<dlib::rgb_alpha_pixel>*>(dst));
                uint8_t* s = static_cast<uint8_t*>(src);

                if (rgb_reverse)
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t src_row = steps * r;
                        uint32_t dst_row = columns * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            dlib::rgb_alpha_pixel& rgb = d(r, c);
                            rgb.alpha = s[src_row + dst_column + 3];
                            rgb.red   = s[src_row + dst_column + 2];
                            rgb.green = s[src_row + dst_column + 1];
                            rgb.blue  = s[src_row + dst_column + 0];
                        }
                    }
                }
                else
                {
                    for (uint32_t r = 0; r < rows; r++)
                    {
                        uint32_t src_row = steps * r;
                        uint32_t dst_row = columns * r;
                        for (uint32_t c = 0, dst_column = 0; c < columns; c++, dst_column += channels)
                        {
                            dlib::rgb_alpha_pixel& rgb = d(r, c);
                            rgb.red   = s[src_row + dst_column + 0];
                            rgb.green = s[src_row + dst_column + 1];
                            rgb.blue  = s[src_row + dst_column + 2];
                            rgb.alpha = s[src_row + dst_column + 3];
                        }
                    }
                }
            }
            break;
        case matrix_element_type::UInt8:
        case matrix_element_type::UInt16:
        case matrix_element_type::Int16:
        case matrix_element_type::Int32:
        case matrix_element_type::Float:
        case matrix_element_type::Double:
        case matrix_element_type::HsiPixel:
            break;
        default:
            break;
    }
}